--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,15 +42,18 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: '1.23'
+        
+    - name: Install the fyne build tool
+      run: go install fyne.io/fyne/v2/cmd/fyne@latest
 
     - name: Build
-      run: go build -ldflags "-s -w" -v ./...
+      run: fyne package --release
       
     - name: Production artifact
       uses: actions/upload-artifact@v4
       with:
         name: windows-x86-64
-        path: mpd_radio.exe
+        path: "MPD Radio.exe"
         
         
   build-macos-x86-64:
@@ -63,14 +66,17 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Install the fyne build tool
+      run: go install fyne.io/fyne/v2/cmd/fyne@latest
+
     - name: Build
-      run: go build -ldflags "-s -w" -v ./...
+      run: fyne package --release
       
     - name: Production artifact
       uses: actions/upload-artifact@v4
       with:
         name: macos-x86-64
-        path: mpd_radio
+        path: "MPD Radio.app"
         
 
   build-macos-arm64:
@@ -83,11 +89,14 @@ jobs:
       with:
         go-version: '1.23'
 
+    - name: Install the fyne build tool
+      run: go install fyne.io/fyne/v2/cmd/fyne@latest
+
     - name: Build
-      run: go build -ldflags "-s -w" -v ./...
+      run: fyne package --release
       
     - name: Production artifact
       uses: actions/upload-artifact@v4
       with:
         name: macos-arm64
-        path: mpd_radio
+        path: "MPD Radio.app"
