--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -100,3 +100,34 @@ jobs:
       with:
         name: macos-arm64
         path: "MPD Radio.app"
+
+  build-android:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: '1.23'
+
+    - name: Install the fyne build tool
+      run: go install fyne.io/fyne/v2/cmd/fyne@latest
+
+    - name: Setup java
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: '21'
+
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+
+    - name: Build
+      run: fyne package -os android --release
+
+    - name: Production artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: android
+        path: MPD_Radio.apk
