--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,10 +5,12 @@ name: Go
 
 on: [push, pull_request]
   
-
 jobs:
-
-  build-linux-x86-64:
+  build-matrix:
+    strategy:
+      matrix:
+        os: [windows, linux, darwin]
+        arch: [amd64, arm64]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -19,69 +21,15 @@ jobs:
         go-version: '1.23'
 
     - name: Build
-      run: go build -ldflags "-s -w" -v ./...
-      
+      run: GOOS=${{matrix.os}} GOARCH=${{matrix.arch}} go build -o mpd_radio_build-${{matrix.os}}-${{matrix.arch}} -ldflags "-s -w" -v ./...
+
+    - name: Normalize file names
+      if: matrix.os == 'windows'
+      run: for x in mpd_radio_build-windows-*; do mv $x $x.exe; done
+
     - name: Production artifact
       uses: actions/upload-artifact@v4
       with:
-        name: linux-x86-64
-        path: mpd_radio
+        name: "MPD Radio ${{matrix.os}} ${{matrix.arch}}"
+        path: mpd_radio_build-*
 
-
-  build-windows-x86-64:
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-        
-    - name: Build
-      run: go build -ldflags "-s -w" -v ./...
-      
-    - name: Production artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: windows-x86-64
-        path: "mpd_radio.exe"
-        
-        
-  build-macos-x86-64:
-    runs-on: macos-13
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-
-    - name: Build
-      run: go build -ldflags "-s -w" -v ./...
-      
-    - name: Production artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-x86-64
-        path: mpd_radio
-        
-  build-macos-arm64:
-    runs-on: macos-14
-    steps:
-    - uses: actions/checkout@v4
-
-    - name: Set up Go
-      uses: actions/setup-go@v5
-      with:
-        go-version: '1.23'
-
-    - name: Build
-      run: go build -ldflags "-s -w" -v ./...
-      
-    - name: Production artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: macos-arm64
-        path: mpd_radio
